              The old C++-only dumpConstruction() is kept but deprecated.
              Also fixed a problem where the C++ initialiser lists were empty
              (instead of containing a single 0) for zero-crossing components.
            - Routine selfFrame() now returns a boolean indicating whether
              anything changed.
        Class LockViolation:
            - New exception class used when the user attempts to change a
              locked simplex or facet.
        Class Matrix<T>:
            - Added a copy constructor that takes a matrix whose elements are
              of a different type.
            - Added destructive and non-destructive rank() functions.
            - New routines negateRow() and negateCol().
            - New routine initialised().
            - Renamed initialise() to fill(), to make it clear that this has
              nothing to do with initialised vs uninitialised matrices.
              The old name is kept but deprecated.
            - The ring template argument now defaults to true for matrices over
              native C++ floating-point types, and Python now has a new binding
              MatrixReal to represent the C++ type Matrix<double>.
        Class ModelLinkGraph:
            - New routines isSimple() and isConnected().
            - Routine generateMinimalLinks() now supports multiple-component
              links.
        Class ModelLinkGraphNode:
            - New routines loops(), bigons() and triangles().
        Enum NamedPermGroup:
            - This is now a scoped enumeration, for better type safety.
              The old enum constants (e.g., PERM_GROUP_TRIVIAL) have been
              renamed as scoped enum values (e.g., NamedPermGroup::Trivial).
              The old names have been kept as deprecated compile-time constants
              in the regina:: namespace.
        Class NativeInteger<bytes>:
            - New routine str().
        Enum NiceType: