@@ -720,7 +720,8 @@ class Triangulation<4> : public detail::TriangulationBase<4> {
          * (multithreaded) mode; simply pass the number of parallel threads
          * in the argument \a threads.  Even in multithreaded mode, this
          * routine will not return until processing has finished (i.e., either
-         * the triangulation was simplified or the search was exhausted).
+         * the triangulation was simplified or the search was exhausted), and
+         * any change to this triangulation will happen in the calling thread.
          *
          * If this routine is unable to simplify the triangulation, then
          * the triangulation will not be changed.
